@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>org.premsc</groupId>
 	<artifactId>analyser</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
@@ -51,16 +50,16 @@
 			<version>2.0.13</version>
 		</dependency>
 	</dependencies>
-
 	<build>
-
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>21</source>
-					<target>21</target>
+					<release>21</release>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
                 </configuration>
 			</plugin>
 			<plugin>
@@ -97,5 +96,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
